# ShellMind

./: README.md  colorama.py  pyfiglet.py  pyproject.toml  reqirements.txt  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml
app/: __init__.py  ai.py  commands.py  config.py  console.py  errors.py  messages.py  model.py  rendering.py  session.py  tools.py
docs/: CONFIGURATION.md
flash/: __main__.py  ai.py  sysprompt.py  system_prompt.txt  tools.py
google/genai/: __init__.py  errors.py  types.py
rich/: console.py  markdown.py
shellmind/: __main__.py  ai.py  tools.py
tests/: helpers.py  test_ai.py  test_commands.py  test_config.py  test_messages.py  test_model.py  test_session.py  test_tools.py
