[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shellmind"
version = "0.1.0"
description = "ShellMind CLI"
authors = [
    { name = "Natuworkguy" },
]
dependencies = [
    "colorama",
    "ollama",
    "pyfiglet",
    "python-dotenv",
    "rich",
]
requires-python = ">=3.10"

[project.scripts]
shellmind = "shellmind.ai:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["shellmind*"]
