[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flash"
version = "0.1.0"
description = "FLASH CLI"
authors = [
    { name = "Natuworkguy" },
]
dependencies = [
    "colorama",
    "ollama",
    "pyfiglet",
    "python-dotenv",
    "rich",
]
requires-python = ">=3.10"

[project.scripts]
flash = "flash.ai:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flash*"]
